// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartupScriptSelection empty state - no context values 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="width: 100%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <section />
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
      />
    </div>
  </div>
</div>
`;

exports[`StartupScriptSelection initial render 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="width: 100%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <section />
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main addStartupScript Button--with-current-color Button--variation Button--variation-link Button--size Button--small"
          data-test-id="addStartupScript"
          id="add-startup-script"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            common.plusAddName
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`StartupScriptSelection readonly mode 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="width: 100%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="startupScriptList listHeader"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            style="width: 200px;"
          >
            store
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            style="width: 200px;"
          >
            location
          </p>
          <span />
        </div>
        <div
          class="Layout--vertical StyledProps--main"
        >
          <section>
            <div
              class="rowItem"
            >
              <section
                class="startupScriptList"
              >
                <div
                  class="columnId"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline"
                    data-icon="service-github"
                  >
                    <svg
                      height="20"
                      viewBox="0 0 14 14"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
                        fill="#f42534"
                      />
                    </svg>
                  </span>
                  <div
                    class="connectorNameField"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target Text--targetClass"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                          style="--text-line-clamp: 1;"
                          tabindex="0"
                        >
                          GIT2
                        </p>
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--color"
                      icon="full-circle"
                    >
                      <svg
                        data-icon="full-circle"
                        height="8"
                        viewBox="0 0 16 16"
                        width="8"
                      >
                        <desc>
                          full-circle
                        </desc>
                        <path
                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="columnId"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main"
                    style="--text-line-clamp: 1; width: 300px;"
                  >
                    <span
                      class="noWrap"
                    >
                      [filePath]
                    </span>
                  </p>
                </div>
              </section>
            </div>
          </section>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
      />
    </div>
  </div>
</div>
`;
